# pyview_map

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.release.yml  docker-compose.yml  justfile  justfile.deploy  pyproject.toml
backends/flights_backend/: Dockerfile  flights_service.py  justfile  navigation_utils.py  pyproject.toml
backends/flights_backend/src/flights_backend/: __main__.py  flights_service.py  navigation_utils.py  settings.py
backends/flights_backend/src/flights_backend/models/: dmarker.py  dpolyline.py  map_events.py
backends/places_backend/: Dockerfile  justfile  parks.py  parks_service.py  pyproject.toml
backends/places_backend/src/places_backend/: openrpc.py  parks.py  parks_service.py
backends/places_backend/src/places_backend/models/: list_events.py
docs/: adr-dialog-implementation.md  api-reference.md  architecture_bff_be.md  langgraph-refactor.md  pyview-stream-update-only-bug.md
docs/specification/: lifecycle.md  notes.md  streamable_http_transport
example-data/templates/: classic.yaml
examples/: map_list_demo.py  mock_client.py
examples/list/: parks.py  parks_service.py
examples/planes/: mock_planes.py  mock_planes_original.py  navigation_utils.py
issues/: push_event_handle_info.md
services/bff/: Dockerfile  pyproject.toml
services/bff/src/pyview_map/: __init__.py  app.py
services/bff/src/pyview_map/applications/flights_demo/: flights_demo.py
services/bff/src/pyview_map/applications/places_demo/: __init__.py
services/bff/src/pyview_map/components/dynamic_list/: __init__.py  list_driver.py
services/bff/src/pyview_map/components/dynamic_list/models/: list_commands.py
services/bff/src/pyview_map/components/dynamic_list/sources/: api_list_source.py
services/bff/src/pyview_map/components/dynamic_map/api/: marker_api.py  polyline_api.py
services/bff/src/pyview_map/components/dynamic_map/models/: map_commands.py
services/bff/src/pyview_map/components/dynamic_map/sources/: api_marker_source.py  api_polyline_source.py
services/debate_backend/: Dockerfile  pyproject.toml
services/debate_backend/data/debates/: 1ac915f6-bc86-4d2e-8b7c-08959d302047.json  24f14a46-6988-41b6-a038-af961927ca78.json  25576289-0c2e-4bbf-88f8-e605b2fe1ade.json  3961b344-5fca-41ca-8434-135ad8ce9206.json  6cd0c666-4946-42a6-8e19-5a23a4f5ab7a.json  903e6af9-6825-42af-8a79-350ad1d32f02.json  9e66fa08-9f9d-4310-befb-352dbb096eb8.json  Human_are_a_threat.json  Two_State_Solution_Deepseek.json  ai_workplace_v200.json  c5345f1a-5731-4f61-86ce-73cfc40d2ff5.json  children.json  ddf437bf-3332-4815-94c8-1a096c0fd323.json  ds_vs_llama_apple_andriod.json  ec8f2d11-fe87-476f-963e-57daaa175ae5.json  humans_are_bad_for_ai_ds_debate_v4.json  humans_are_bad_for_ai_llama_debate_v5.json  humans_are_bad_for_ai_v3.json  olympics.json  socrates_on_israel.json  socrates_original_thought_ai.json  t_vs_s_1.json  tabs_vs_spaces.json  tabs_vs_spaces_3..json
services/debate_backend/data/templates/: deepseek-vs-llama.yaml  deepseek.yaml  default.yaml  ds_debate.yaml  ds_debate_v2.yaml  ds_debate_v3.yaml  ds_debate_v4.yaml  ds_debate_v5.yaml  llama_debate_v5.yaml
services/debate_backend/example-data/specs/: ai_workplace.md
services/debate_backend/example-data/templates/: socratic.yaml
services/debate_backend/src/debate_backend/: __main__.py  commands.py  debate.py  ollama_client.py  settings.py  spec_parser.py
services/debate_backend/src/debate_backend/engine/: __init__.py  llm_factory.py  models.py  state.py
services/debate_backend/src/debate_backend/engine/graphs/: __init__.py  debate_graph.py
services/debate_backend/src/debate_backend/engine/routers/: __init__.py  base.py  round_robin.py
services/debate_backend/tests/: test_debate.py  test_debate_commands.py
services/debate_bff/: .gitignore  CLAUDE.md  Dockerfile  pyproject.toml
services/debate_bff/docs/: plan.md  requirements.md  research-acp.md  research-backend.md  research-pyview.md
services/debate_bff/src/debate_bff/: __main__.py  app.py  transcript_store.py
services/debate_bff/src/debate_bff/services/: rpc_client.py
services/debate_bff/src/debate_bff/views/chat/: chat_view.html  chat_view.py
services/flights_backend/: .env.example  Dockerfile  pyproject.toml
services/flights_backend/src/flights_backend/: flights_service.py  navigation_utils.py
services/flights_bff/: Dockerfile  pyproject.toml
services/flights_bff/src/flights_bff/: __init__.py  __main__.py  flights_demo.py  settings.py
services/places_backend/: .env.example  Dockerfile  pyproject.toml
services/places_backend/src/places_backend/: __main__.py  parks.py  parks_service.py  settings.py
services/places_bff/: Dockerfile  pyproject.toml
services/places_bff/src/places_bff/: __init__.py  __main__.py  places_demo.py  settings.py
src/pyview_map/: __main__.py  api.py  app.py  openrpc.py  settings.py
src/pyview_map/applications/flights_demo/: __init__.py  flights_demo.py
src/pyview_map/applications/places_demo/: places_demo.py
src/pyview_map/components/dynamic_list/: list_driver.py
src/pyview_map/components/dynamic_map/: __init__.py  dynamic_map_component.py  map_driver.py
src/pyview_map/components/shared/: event_broadcaster.py  parse_event.py  topics.py
src/pyview_map/views/: __init__.py
src/pyview_map/views/demo/: __init__.py  demo.py
src/pyview_map/views/dynamic_list/: api_list_source.py  dlist_item.py  dynamic_list.css  dynamic_list.py  list_api.py
src/pyview_map/views/dynamic_map/: __init__.py  api_marker_source.py  api_polyline_source.py  command_queue.py  dmarker.py  dpolyline.py  dynamic_map.html  dynamic_map.py  event_broadcaster.py  icons.json  latlng.py  map_events.py  marker_api.py  mock_generator.py
src/pyview_map/views/dynamic_map_demo/: __init__.py  dynamic_map_demo.py
src/pyview_map/views/image_list_demo/: __init__.py  image_list_demo.py
src/pyview_map/views/map_list_demo/: __init__.py  map_list_demo.py
src/pyview_map/views/maps/: map.html  map.py  parks.py
src/pyview_map/views/multimaps_demo/: __init__.py  multimaps_demo.py
(+57 files in other folders)
