[project]
name = "pyview-map-workspace"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["services/*", "packages/*"]

[tool.uv.sources]
http-stream-transport = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/server_pkg" }
http-stream-client = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/client" }
jrpc-common = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/jrpc_common" }
dmap-models = { workspace = true }

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true
