[project]
name = "pyview-map-workspace"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv.workspace]
members = ["services/*", "packages/*"]

[tool.uv.sources]
http-stream-transport = { workspace = true }
http-stream-client = { workspace = true }
jrpc-common = { workspace = true }
dmap-models = { workspace = true }
bff-engine = { workspace = true }

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true
