[project]
name = "flights-backend"
version = "0.1.0"
description = "Flight simulation backend — pushes real-time aircraft positions via JSON-RPC"
requires-python = ">=3.14"
dependencies = [
    "uvicorn>=0.41.0",
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "http-stream-transport",
    "http-stream-client",
    "jrpc-common",
]

[tool.uv.sources]
http-stream-transport = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/server_pkg" }
http-stream-client = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/client" }
jrpc-common = { git = "ssh://git@github.com/avilior/http_stream_prj", subdirectory = "packages/jrpc_common" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_backend"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
skip-magic-trailing-comma = true

[project.scripts]
flights-backend = "flights_backend.__main__:main"
