[project]
name = "pyview-map"
version = "0.1.0"
description = "PyView LiveView BFF — interactive Leaflet.js maps"
requires-python = ">=3.14"
dependencies = [
    "pyview-web>=v0.9.0a4",
    "uvicorn>=0.41.0",
    "fastapi>=0.115",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
    "http-stream-transport",
    "http-stream-client",
    "jrpc-common",
    "dmap-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyview_map"]

[project.scripts]
pyview-map = "pyview_map.__main__:main"
