[project]
name = "flights-backend"
version = "0.1.0"
description = "Flight simulation backend — pushes real-time aircraft positions via JSON-RPC"
requires-python = ">=3.14"
dependencies = [
    "uvicorn>=0.41.0",
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "http-stream-transport",
    "http-stream-client",
    "jrpc-common",
    "dmap-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flights_backend"]

[project.scripts]
flights-backend = "flights_backend.__main__:main"
