[project]
name = "places-backend"
version = "0.1.0"
description = "National parks data backend — exposes park data via JSON-RPC"
requires-python = ">=3.14"
dependencies = [
    "uvicorn>=0.41.0",
    "fastapi>=0.115",
    "pydantic-settings>=2.0",
    "http-stream-transport",
    "http-stream-client",
    "jrpc-common",
    "dmap-models",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/places_backend"]

[project.scripts]
places-backend = "places_backend.__main__:main"
