[project]
name = "places-bff"
version = "0.1.0"
description = "Places BFF — interactive parks list and map"
requires-python = ">=3.14"
dependencies = [
    "bff-engine",
    "uvicorn>=0.41.0",
    "httpx>=0.28",
    "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/places_bff"]

[project.scripts]
places-bff = "places_bff.__main__:main"
